Fix melee Item Values overlapping in tablet mode.

--- a/extension/scripts/features/item-values/ttItemValues.css
+++ b/extension/scripts/features/item-values/ttItemValues.css
@@ -47,13 +47,13 @@ body.tt-tablet .tt-item-price {
 }
 
 body.tt-tablet li[data-category="Primary"] .tt-item-price,
-body.tt-tablet li[data-category="Secondary"] .tt-item-price {
+body.tt-tablet li[data-category="Secondary"] .tt-item-price,
+body.tt-tablet li[data-category="Melee"] .tt-item-price {
 	transform: translateX(-225px);
 }
 
 body.tt-tablet li[data-category="Defensive"]:not([data-group]) .tt-item-price,
-body.tt-tablet li[data-category="Defensive"][data-group="item"] .tt-item-price,
-body.tt-tablet li[data-category="Melee"] .tt-item-price {
+body.tt-tablet li[data-category="Defensive"][data-group="item"] .tt-item-price {
 	transform: translateX(-155px);
 }
 
